@@ -183,14 +183,14 @@ public class MonetHelper {
     }
 
     private static int darkenByPercent(int color, int percent) {
-        int normalizedPercent = Math.max(1, Math.min(percent, 100));
+        int normalizedPercent = Math.clamp(percent, 1, 100);
         if (normalizedPercent == 100) {
             return color;
         }
 
         float[] hsl = new float[3];
         ColorUtils.colorToHSL(color, hsl);
-        hsl[2] = Math.max(0f, Math.min(1f, hsl[2] * normalizedPercent / 100f));
+        hsl[2] = Math.clamp(hsl[2] * normalizedPercent / 100f, 0f, 1f);
 
         return ColorUtils.setAlphaComponent(ColorUtils.HSLToColor(hsl), Color.alpha(color));
     }
